Add Jetty adapter to add logging and GZip. Refactor.

--- a/contrib/uberjar/Dockerfile
+++ b/contrib/uberjar/Dockerfile
@@ -2,7 +2,7 @@ FROM ruudud/leiningen
 
 ONBUILD ADD . /app
 ONBUILD WORKDIR /app
-ONBUILD RUN lein ring uberjar
+ONBUILD RUN lein uberjar
 ONBUILD RUN mv target/*-standalone.jar target/app-standalone.jar
 
 ENTRYPOINT ["java", "-jar", "/app/target/app-standalone.jar"]
