Update leiningen Dockerfile

--- a/contrib/leiningen/Dockerfile
+++ b/contrib/leiningen/Dockerfile
@@ -1,9 +1,11 @@
-FROM hrafique/openjdk-quantal
+FROM yaronr/openjdk-7-jre
 
-RUN apt-get update
-RUN apt-get install -y curl
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y curl && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN curl https://raw.github.com/technomancy/leiningen/stable/bin/lein > /usr/local/bin/lein
+RUN curl -L https://raw.github.com/technomancy/leiningen/stable/bin/lein > /usr/local/bin/lein
 RUN chmod a+x /usr/local/bin/lein
 
 ENV LEIN_ROOT 1
